@@ -150,6 +150,7 @@
 		<form id="form" action="formaction">
 			<input type="text" name="action" value="Test" id="text1"/>
 			<input type="text" name="text2" value="   " id="text1b"/>
+			<input type="text" name="text2" value="T " id="text1c"/>
 			<input type="text" name="text2" value="T" id="text2"/>
 			<input type="text" name="text2" value="TestTestTest" id="text3"/>
 			
